# open-match-rust

./: Cargo.toml  README.md  build.rs  skaffold.yaml
director/: Cargo.toml  Dockerfile  build.rs  director.yaml
director/src/: err.rs  main.rs
game-front/: Cargo.toml  Dockerfile  build.rs  game-front.yaml
game-front/src/: main.rs
match-function/: Cargo.toml  Dockerfile  build.rs  match-function.yaml
match-function-client/: Cargo.toml  build.rs
match-function-client/src/: main.rs
match-function/src/: err.rs  main.rs  query.rs  server.rs  trace.rs
