[workspace]
resolver = "2"
members = ["director", "game-front", "match-function", "match-function-client"]

[workspace.dependencies]
tonic-build = "0.12"
thiserror = "1.0.64"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"
tracing_spanned = { git = "https://github.com/pulsuite/tracing_spanned", rev = "6fed6097d13d117e4d35120f56450b156c33b77e" }
