[package]
name = "director"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "director"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13.3"
rand = "0.8.5"
tokio-stream = "0.1.16"
thiserror.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
tracing_spanned.workspace = true

[build-dependencies]
tonic-build.workspace = true
