[package]
name = "game-front"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "game-front"
path = "src/main.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost-types = "0.13.3"
rand = "0.8.5"

[build-dependencies]
tonic-build.workspace = true
