[package]
name = "match-function-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "match-function"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13.3"
tokio-stream = "0.1.16"

[build-dependencies]
tonic-build.workspace = true
