[package]
name = "match-function"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "match-function"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12", features = ["transport", "tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13.3"
rand = "0.8.5"
tokio-stream = "0.1.16"
thiserror.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
tracing_spanned.workspace = true

[build-dependencies]
tonic-build.workspace = true
